fix grid, fix layout on small screens, automatic close on hamburger menu clicking

--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   gap: 1em;
+  height: 70vh;
+  min-height: 450px;
 }
 
 @keyframes fadeIn {
@@ -202,7 +204,6 @@ header h2 {
   color: #ffaaaa;
   font-size: 30px;
   margin-top: 2em;
-  margin-bottom: 35vh;
 }
 
 .links-top {
@@ -228,10 +229,10 @@ main {
   margin: 5em 10vw;
 }
 
-#projects {
+.projects-grid {
   display: grid;
   grid-template-columns: 20vw 20vw 20vw;
-  gap: 55px 55px;
+  gap: 3vh 3vw;
   justify-content: center;
 }
 
@@ -258,7 +259,7 @@ main {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 7px;
   padding: 1em 1em;
-  min-height: 450px;
+  min-height: 500px;
 }
 
 .project-card:hover {
@@ -276,9 +277,10 @@ main {
 
 .project-card img {
   margin-top: 1em;
-  object-fit: contain;
-  max-height: 60%;
+  object-fit: cover;
+  min-height: 55%;
   max-width: 100%;
+  max-height: 80%;
   border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 7px;
 }
@@ -431,8 +433,8 @@ main {
   top: 0;
   right: -250px;
   width: 200px;
-  height: 100%;
-  background-color: #242333;
+  height: 50%;
+  background-color: #403e5c;
   padding: 0px 10px;
   box-sizing: border-box;
   z-index: 9;
@@ -476,7 +478,7 @@ main {
   #hamburger-menu {
     display: inline;
   }
-  #projects {
+  .projects-grid {
     grid-template-columns: 40vw 40vw;
     gap: 35px 35px;
   }
@@ -492,8 +494,6 @@ main {
     font-size: 1.2em;
   }
   .project-card img {
-    max-height: 200px;
-    max-width: 100%;
     object-fit: contain;
     border: 2px solid rgba(0, 0, 0, 0.2);
     border-radius: 7px;
@@ -537,7 +537,7 @@ main {
     font-size: 25px;
     margin: 0;
   }
-  #projects {
+  .projects-grid {
     grid-template-columns: 70vw;
     gap: 35px 35px;
   }
